src/mongo/db/query/query_tester/tests/selfTests/negativeTests/run_tests/bad_document.coll
{a: 1}

{a: {bad: document}}
